# learn_softrenderer

./: CMakeLists.txt  README.md  draw_line.cpp  draw_line.h  draw_point.cpp  draw_point.h  draw_triangle.cpp  draw_triangle.h  geometry.cpp  geometry.h  main.cpp  matrix.cpp  model.cpp  model.h  tga_image.cpp
commons/: CMakeLists.txt  commons.cpp  commons.h  draw_line.cpp  draw_line.h  draw_point.cpp  draw_point.h  draw_triangle.cpp  draw_triangle.h  matrix.cpp  matrix.h  model.cpp  model.h  our_gl.cpp  our_gl.h  tga_image.cpp  tga_image.h
lessons/: CMakeLists.txt  lessons_1.cpp  lessons_1.h  lessons_2.cpp  lessons_2.h  lessons_3.cpp  lessons_3.h  lessons_4.cpp  lessons_4.h
outpur_images/: render.tga
